Remove JDK11 explicit features